--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,5 @@ rust-version = "1.66"
 
 [workspace.dependencies]
 anyhow = "1.0.79"
-crux_core = "0.7"
-serde = "1.0.196"
+crux_core = { git = "../crux/crux_core/"}
+serde = { version = "1.0.196", features = ["derive"]}
